--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
-  "homepage" : "https://github.com/fallen158/react-Demo/build",
+  "homepage" : "https://github.com/react-Demo/build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
